change discussion to general, post_0014 half done

--- a/_notebooks/2018-09-14-post-0001.ipynb
+++ b/_notebooks/2018-09-14-post-0001.ipynb
@@ -9,7 +9,7 @@
     "- toc: true\n",
     "- comments: true\n",
     "- author: Kushajveer Singh\n",
-    "- categories: [discussion]\n",
+    "- categories: [general]\n",
     "- image: images/preview/post_001.jpeg\n",
     "- badges: false"
    ]
@@ -278,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
