--- a/_posts/2018-09-14-post-0001.md
+++ b/_posts/2018-09-14-post-0001.md
@@ -5,7 +5,7 @@ title: "Theoretical Machine Learning: Probabilistic and Statistical Math"
 toc: true
 comments: true
 author: Kushajveer Singh
-categories: [discussion]
+categories: [general]
 image: images/preview/post_001.jpeg
 badges: false
 nb_path: _notebooks/2018-09-14-post-0001.ipynb
@@ -21,13 +21,6 @@ layout: notebook
 
 <div class="container" id="notebook-container">
         
-    {% raw %}
-    
-<div class="cell border-box-sizing code_cell rendered">
-
-</div>
-    {% endraw %}
-
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>I will start with a quick overview of probability and then dive into details of Gaussian distribution. In the end I have provided links to some of the theoretical books that I have read for the concepts mentioned here.</p>
