--- a/_posts/2020-07-10-post-0011.md
+++ b/_posts/2020-07-10-post-0011.md
@@ -5,7 +5,7 @@ title: Deep Learning Model Initialization in Detail
 toc: true
 comments: true
 author: Kushajveer Singh
-categories: [discussion]
+categories: [general]
 badges: true
 nb_path: _notebooks/2020-07-10-post-0011.ipynb
 layout: notebook
