--- a/_posts/2020-08-31-post-0012.md
+++ b/_posts/2020-08-31-post-0012.md
@@ -5,7 +5,7 @@ title: "ImageNet Dataset Advancements"
 toc: true
 comments: true
 author: Kushajveer Singh
-categories: [discussion]
+categories: [general]
 badges: false
 nb_path: _notebooks/2020-08-31-post-0012.ipynb
 layout: notebook
@@ -20,13 +20,6 @@ layout: notebook
 
 <div class="container" id="notebook-container">
         
-    {% raw %}
-    
-<div class="cell border-box-sizing code_cell rendered">
-
-</div>
-    {% endraw %}
-
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="ImageNet-database">ImageNet database<a class="anchor-link" href="#ImageNet-database"> </a></h2><ul>
