--- a/_notebooks/2019-02-18-post-0002.ipynb
+++ b/_notebooks/2019-02-18-post-0002.ipynb
@@ -9,7 +9,7 @@
     "- toc: true\n",
     "- comments: true\n",
     "- author: Kushajveer Singh\n",
-    "- categories: [discussion]\n",
+    "- categories: [general]\n",
     "- image: images/preview/post_002.png\n",
     "- badges: false"
    ]
@@ -538,7 +538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
