--- a/_notebooks/2019-06-26-post-0010.ipynb
+++ b/_notebooks/2019-06-26-post-0010.ipynb
@@ -9,7 +9,7 @@
     "- toc: true\n",
     "- comments: true\n",
     "- author: Kushajveer Singh\n",
-    "- categories: [discussion]\n",
+    "- categories: [general]\n",
     "- badges: true"
    ]
   },
@@ -1982,7 +1982,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
