pre release draft 2 post 0014

--- a/_posts/2021-03-13-post-0014.md
+++ b/_posts/2021-03-13-post-0014.md
@@ -4,7 +4,7 @@ description: "Learn everything you need to know on how to use Hydra in your mach
 layout: post
 toc: true
 comments: true
-hide: false
+hide: true
 search_exclude: true
 categories: [general]
 ---
@@ -13,7 +13,7 @@ categories: [general]
 
 In an effort to increase standardization across the PyTorch ecosystem Facebook AI in a recent [blog post](https://ai.facebook.com/blog/reengineering-facebook-ais-deep-learning-platforms-for-interoperability/) told that they would be leveraging Facebook's open source [Hydra framework](https://hydra.cc/) to handle configs, and also offer an integration with [PyTorch Lightning](https://www.pytorchlightning.ai/). This post is about Hydra.
 
-If you are reading this post then I assume that you are familiar with what are config files, why are they useful and how they increase reproducibility. And you also know what nightmare is [argparse](https://docs.python.org/3/library/argparse.html). In general, with config files you can pass all the hyperparameters to your model, you can define all the global constants, define dataset splits and ... without touching the core code of your project.
+If you are reading this post then I assume that you are familiar with what are config files, why are they useful and how they increase reproducibility. And you also know what nightmare [argparse](https://docs.python.org/3/library/argparse.html) is. In general, with config files you can pass all the hyperparameters to your model, you can define all the global constants, define dataset splits and ... without touching the core code of your project.
 
 On [Hydra website](https://hydra.cc/docs/intro) the following are listed as the key features of Hydra
 * Hierarchical configuration composable from multiple sources
@@ -30,7 +30,7 @@ Install Hydra (I am using version `1.0`)
 pip install hydra-core --upgrade
 ```
 
-When working on a project your general repository structure would look something like this
+For this blog post I would assume the following directory structure, where all the configs are stored in a `config` folder, with the main config file being named `config.yaml`. And for simplicity assume `main.py` is all the source code of our project.
 ```bash
 src
 ├── config
@@ -51,15 +51,12 @@ And the corresponding `main.py` file
 ### main.py
 
 import hydra
-from omegaconf import DictConfig, OmegaConf
+from omegaconf import DictConfig
 
-@hydra.main(config_name="config/config.yaml")
+@hydra.main(config_path="config", config_name="config")
 def main_func(cfg: DictConfig):
     working_dir = os.getcwd()
     print(f"The current working directory is {working_dir}\n")
-
-    print("The contents of the config file are")
-    print(OmegaConf.to_yaml(cfg))
 
     # To access elements of the config
     print(f"The batch size is {cfg.batch_size}")
@@ -73,25 +70,21 @@ Now when I run `python main.py` I get the following output
 ```bash
 The current working directory is src/outputs/2021-03-13/16-22-21
 
-The contents of the config file are
-batch_size: 10
-lr: 0.0001
-
 The batch size is 10
 The learning rate is 0.0001
 ```
 
-> **Note**: The path is shortened to not include the complete path from root. For the rest of the post, assume we are working in `src` directory.
+> **Note**: The path is shortened to not include the complete path from root. Also, you can pass either `config.yaml` or `config` to `config_name`.
 
-A lot happened, let's parse it one by one
-* `omegaconf` is installed by default when you install `hydra`. It is only used to provide the type annotation for `cfg` argument in `main_func`. If you want to print the contents of `cfg` then you can use `OmegaConf`. Apart from this `omegaconf` does not have any important role.
+A lot happened, let's parse it one by one.
+* `omegaconf` is installed by default with `hydra`. It is only used to provide the type annotation for `cfg` argument in `main_func`.
 
-* `@hydra.main(config_name="config/config.yaml")` This is the main decorator function that you will use, whenever you want to use any configuration file from the `config` folder. An alternative way to write this command is `@hydra.main(config_path="config", config_name="config.yaml")`.
+* `@hydra.main(config_path="config", config_name="config")` This is the main decorator function that is used when any function requires contents from a configuration file.
 
-* **Current working directory is changed**. I ran the code in `src/main.py` but the output shows that the current working directory is `src/outputs/2021-03-13/16-22-21`. This is the most important point when using Hydra. An explanation follows below.
+* **Current working directory is changed**. `python main.py` executed the code in `src/` but the output shows the current working directory is `src/outputs/2021-03-13/16-22-21`. This is the most important point when using Hydra. An explanation follows below.
 
 ### How hydra handles different runs
-Whenever you execute your program using `python main.py` Hydra will create a new folder in `outputs` directory with the following naming scheme `outputs/YYYY-MM-DD/HH-mm-SS` i.e. the data and time at which the file was executed. Think about this for a second. Hydra provides you a way to maintain the logs of every run without you having to worry about it. 
+Whenever a program is executed using `python main.py` Hydra will create a new folder in `outputs` directory with the following naming scheme `outputs/YYYY-mm-dd/HH-MM-SS` i.e. the data and time at which the file was executed. Think about this for a second. Hydra provides you a way to maintain the logs of every run without you having to worry about it. 
 
 In my case the directory structure looks like this after running `python main.py` (Let's not worry about the contents of each folder for now).
 ```bash
